fix: gap and width projects

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ li {
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
-  max-width: 1366px;
+  width: 1366px;
   height: 550px;
   margin: 0 auto;
   background: rgb(255, 255, 255);
@@ -63,7 +63,6 @@ li {
 }
 
 .header .container-image {
-  min-width: 320px;
   width: 100%;
   height: auto;
   background-size: cover;
@@ -145,24 +144,20 @@ li {
 main.main {
   display: flex;
   flex-direction: column;
-  max-width: 1366px;
+  width: 1366px;
   height: auto;
   margin: 0 auto;
 }
 .wrapper-main {
   display: flex;
   flex-direction: column;
-  max-width: 1366px;
+  width: 1366px;
   height: auto;
-  margin: 0px auto;
 }
 
 .wrapper-main-one {
   display: flex;
   flex-wrap: nowrap;
-  max-width: 1366px;
-  height: auto;
-  margin: 0px auto;
   color: #271a1a;
   background: rgb(255, 255, 255);
   background: linear-gradient(
@@ -175,9 +170,7 @@ main.main {
 .wrapper-main-two {
   display: flex;
   flex-direction: column;
-  max-width: 1366px;
-  height: auto;
-  margin: 0px auto;
+  padding-top: 10px;
   background: rgb(255, 255, 255);
   background: linear-gradient(
     180deg,
@@ -238,26 +231,17 @@ main.main {
 .soft-list > li {
   line-height: 1.525;
 }
-#languages {
-  position: relative;
-  top: 50px;
-}
-#projects {
-  display: flex;
-  flex-direction: column;
-  row-gap: 20px;
-}
+
 .container-projects {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 40px;
-  margin: 14px 0;
-  padding-bottom: 30px;
+  justify-content: space-around;
+  row-gap: 20px;
+  margin: 38px 0;
 }
 .container-projects figure {
   box-sizing: border-box;
-  width: 40%;
+  width: 25%;
   text-align: center;
   background: linear-gradient(
     0deg,
@@ -289,7 +273,7 @@ main.main {
   flex-wrap: nowrap;
   justify-content: space-around;
   align-items: center;
-  max-width: 1366px;
+  width: 1366px;
   height: 100px;
   margin: 0 auto;
   font-size: 1.5rem;
@@ -304,4 +288,8 @@ main.main {
 .footer .footer-img .img-rs {
   width: 120px;
   height: 80px;
+  transition: 0.3s;
+}
+.footer .footer-img .img-rs:hover {
+  transform: scale(1.1);
 }
